--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -190,9 +190,10 @@
                                         <h3 class="font-semibold text-blueGray-700 text-2xl">Blog Posts</h3>
                                     </div>
                                     <div class=" w-full px-4 max-w-full flex-grow flex-1 text-right">
+                                        <a href="/edit/0">
                                         <button
                                             class="bg-indigo-500 text-white active:bg-indigo-600 text-xl font-bold uppercase px-3 py-1 rounded outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150"
-                                            type="button">Add task</button>
+                                            type="button">Add New Post</button></a>
                                     </div>
                                 </div>
                             </div>
