--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -66,15 +66,18 @@
                                 <span>Home</span>
                             </a>
                         </nav>
+
                         <div class="flex-shrink-0 p-4">
-                            <button class="flex items-center space-x-2">
-                                <svg aria-hidden="true" class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none"
-                                    viewBox="0 0 24 24" stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                        d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" />
-                                </svg>
-                                <span>Logout</span>
-                            </button>
+                            <a href="/logout">
+                                <button class="flex items-center space-x-2">
+                                    <svg aria-hidden="true" class="w-6 h-6" xmlns="http://www.w3.org/2000/svg"
+                                        fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                            d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" />
+                                    </svg>
+                                    <span>Logout</span>
+                                </button>
+                            </a>
                         </div>
                     </div>
 
@@ -191,9 +194,9 @@
                                     </div>
                                     <div class=" w-full px-4 max-w-full flex-grow flex-1 text-right">
                                         <a href="/edit/0">
-                                        <button
-                                            class="bg-indigo-500 text-white active:bg-indigo-600 text-xl font-bold uppercase px-3 py-1 rounded outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150"
-                                            type="button">Add New Post</button></a>
+                                            <button
+                                                class="bg-indigo-500 text-white active:bg-indigo-600 text-xl font-bold uppercase px-3 py-1 rounded outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150"
+                                                type="button">Add New Post</button></a>
                                     </div>
                                 </div>
                             </div>
@@ -244,20 +247,20 @@
                                                 class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-lg whitespace-nowrap p-4 text-center">
 
                                                 <a href="/edit/{{posts.sno}}">
-                                                <button type="button"
-                                                    class="text-lg px-4 inline-flex items-center gap-x-2  font-semibold rounded-lg border border-transparent text-blue-600 hover:bg-blue-100 hover:text-blue-800 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-500 dark:hover:bg-blue-800/30 dark:hover:text-black dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600">
-                                                    Edit
-                                                </button>
-                                            </a>
+                                                    <button type="button"
+                                                        class="text-lg px-4 inline-flex items-center gap-x-2  font-semibold rounded-lg border border-transparent text-blue-600 hover:bg-blue-100 hover:text-blue-800 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-500 dark:hover:bg-blue-800/30 dark:hover:text-black dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600">
+                                                        Edit
+                                                    </button>
+                                                </a>
 
 
 
 
-
-                                                <button type="button"
-                                                    class="text-lg px-4 inline-flex items-center gap-x-2  font-semibold rounded-lg border border-transparent text-blue-600 hover:bg-blue-100 hover:text-blue-800 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-500 dark:hover:bg-blue-800/30 dark:hover:text-black dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600">
-                                                    Delete
-                                                </button>
+                                                <a href="/delete/{{posts.sno}}">
+                                                    <button type="button"
+                                                        class="text-lg px-4 inline-flex items-center gap-x-2  font-semibold rounded-lg border border-transparent text-blue-600 hover:bg-blue-100 hover:text-blue-800 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-500 dark:hover:bg-blue-800/30 dark:hover:text-black dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600">
+                                                        Delete
+                                                    </button></a>
 
 
                                             </td>
