--- a/templates/edit.html
+++ b/templates/edit.html
@@ -14,7 +14,7 @@
   <!-- component -->
   <section class="max-w-4xl p-6 mx-auto bg-indigo-600 rounded-md shadow-md dark:bg-gray-800 mt-20">
     <h1 class="text-xl font-bold text-white capitalize dark:text-white">Edit Your post</h1>
-    <form action="/edit/{{post.sno}}" method="POST">
+    <form action="/edit/{{sno}}" method="POST">
       <div class="grid grid-flow-row gap-6 mt-4 ">
 
         <!-- title -->
