--- a/templates/post.html
+++ b/templates/post.html
@@ -8,43 +8,25 @@
     <link href="{{url_for('static',filename='css/output.css')}}" rel="stylesheet">
 </head>
 
-<body class="bg-[#101820]">
+<body class="bg-gray-800 ">
     {% set fname = post.img_file %}
-    <div class="my-10 ">
-        <div class="flex justify-end mx-3 gap-4">
-            <div class=" max-w-screen-sm flex flex-col text-left translate-y-[6.5rem]">
-                <h2 class=" text-6xl  tracking-tight font-extrabold leading-tight text-gray-900 dark:text-[#FEE715]">
-                    {{post.title}}</h2>
-                <p class="  text-white font-bold text-justify  md:text-lg mt-4">{{post.sub_title}}</p>
-                <p class="mt-4 text-xl text-white"><i>Posted by Admin on {{post.date}}</i></p>
+    <div class="p-5 mx-auto sm:p-10 md:p-16 dark:bg-gray-800 dark:text-gray-100">
+        <div class="flex flex-col max-w-3xl mx-auto overflow-hidden rounded">
+            <img src="/static/{{fname}}" alt="" class="w-full h-60 sm:h-96 dark:bg-gray-500">
+            <div class="p-6 pb-12 m-4 mx-auto -mt-16 space-y-6 lg:max-w-2xl sm:px-10 sm:mx-12 lg:rounded-md dark:bg-gray-900">
+                <div class="space-y-2">
+                    <a rel="noopener noreferrer" href="#" class="inline-block text-2xl font-semibold sm:text-3xl">{{post.title}}</a>
+                    <p class="text-xs dark:text-gray-400">Posted By Admin at
+                        {{post.date}}
+                    </p>
+                </div>
+                <div class="dark:text-gray-100">
+                    <p>{{post.content}}</p>
+                </div>
             </div>
-            <div class="bg-no-repeat bg-cover w-[45rem] h-[30rem] backdrop-blur-3xl "
-                style="background-image: url('/static/{{fname}}');">
-            </div>
         </div>
+    </div>
 
-
-
-        <!-- Content -->
-        <div class=" flex justify-center items-center mt-[4.25rem] mx-20 text-justify">
-            <p class="text-xl text-white">{{post.content}}</p>
-        </div>
-
-        <!-- Go back button -->
-        <div class="flex justify-center mt-10">
-            <a href="/" class="relative inline-block text-lg group ">
-                <span
-                    class="relative z-10 block px-5 py-3 overflow-hidden font-medium leading-tight text-gray-800 transition-colors duration-300 ease-out border-2 border-gray-900 rounded-lg group-hover:text-white">
-                    <span class="absolute inset-0 w-full h-full px-5 py-3 rounded-lg bg-gray-50"></span>
-                    <span
-                        class="absolute left-0 w-48 h-48 -ml-2 transition-all duration-300 origin-top-right -rotate-90 -translate-x-full translate-y-12 bg-gray-900 group-hover:-rotate-180 ease"></span>
-                    <span class="relative">Go Back</span>
-                </span>
-                <span
-                    class="absolute bottom-0 right-0 w-full h-12 -mb-1 -mr-1 transition-all duration-200 ease-linear bg-gray-900 rounded-lg group-hover:mb-0 group-hover:mr-0"
-                    data-rounded="rounded-lg"></span>
-            </a>
-        </div>
     </div>
 </body>
 
