edit login page

--- a/templates/login.html
+++ b/templates/login.html
@@ -14,14 +14,13 @@
           class="relative flex-1 hidden items-center justify-center h-screen bg-gray-900 lg:flex"
         >
           <div class="relative z-10 w-full max-w-md">
-            <img src="https://floatui.com/logo-dark.svg" width="150" />
+            <h1 class="text-4xl text-white font-bold">{{params['blog_name']}}</h1>
             <div class="mt-16 space-y-3">
               <h3 class="text-white text-3xl font-bold">
-                Start growing your business quickly
+                Log in To Add your own Posts
               </h3>
               <p class="text-gray-300">
-                Create an account and get access to all features for 30-days, No
-                credit card required.
+                Create an account and get access to all Posts to edit and delete 
               </p>
             </div>
           </div>
@@ -52,14 +51,7 @@
                 <h3 class="text-gray-800 text-2xl font-bold sm:text-3xl">
                   Sign up
                 </h3>
-                <p class="">
-                  Already have an account?
-                  <a
-                    href="javascript:void(0)"
-                    class="font-medium text-indigo-600 hover:text-indigo-500"
-                    >Log in</a
-                  >
-                </p>
+                
               </div>
             </div>
             <div class="grid grid-cols-3 gap-x-3">
